[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "biasseeker-reproduction"
version = "0.1.0"
description = "Resumable AutoDL reproduction scaffold for BiasSeeker experiments."
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "scikit-learn",
  "torch",
  "tqdm",
  "Pillow",
]

[project.scripts]
biasseeker = "biasseeker.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
